<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/link1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link1"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/link2"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/link1"
        android:text="@string/link2"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/link3"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/link2"
        android:text="@string/link3"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/link4"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/link3"
        android:text="@string/link4"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/help_name"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_name"
        android:gravity="center"
        android:layout_below="@id/link4"
        android:textColor="@color/black"
        android:textSize="18sp"/>

</RelativeLayout>