<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <EditText
        android:id="@+id/Subject_input1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/Subject"/>
    <EditText
        android:id="@+id/Score_input1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/score"/>
    <EditText
        android:id="@+id/Credit_input1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="number"
        android:hint="@string/credit"
        android:gravity="center"
        />

    <Button
        android:id="@+id/button_close"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_weight="1"
        android:background="@drawable/delete_button"
        android:text="@string/delete_the_line"
        android:textColor="@color/white" />


</LinearLayout>