<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    >


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button_demo"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"

        android:layout_marginTop="50dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/icon_plus" />

    <TextView
        android:id="@+id/User_guide1"
        android:layout_width="301dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/add_button_demo"
        android:textColor="@color/white"
        android:textSize="23sp" />


    <TextView
        android:id="@+id/User_guide2"
        android:layout_width="304dp"
        android:layout_height="53dp"
        android:layout_below="@id/User_guide1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="89dp"
        android:layout_marginRight="89dp"
        android:gravity="center"
        android:text="@string/calculate_button_demo"
        android:textColor="@color/white"
        android:textSize="23sp" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/calculate_button_demo"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="67dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/icon_calculate" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/question_mark_demo"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="276dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/icon_question_mark" />

    <TextView
        android:id="@+id/User_guide3"
        android:layout_width="281dp"
        android:layout_height="54dp"
        android:layout_below="@id/User_guide2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/questions_demo"
        android:textColor="@color/white"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/User_guide4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/User_guide3"
        android:layout_marginTop="120dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="50sp"/>

    <TextView
        android:id="@+id/User_guide5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/User_guide4"
        android:layout_marginTop="5dp"
        android:text="@string/to"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="50sp"/>

    <TextView
        android:id="@+id/User_guide6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/User_guide5"
        android:layout_marginTop="5dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="50sp"/>

    <Button
        android:id="@+id/Guide_read_btn"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:text="@string/already_read"
        android:textColor="#36C3FF"
        android:layout_below="@id/User_guide6"
        android:layout_centerHorizontal="true"
        android:shadowColor="#A8A8A8"
        android:background="@drawable/gotit_button2"
        android:layout_marginTop="70dp"
        />

    <CheckBox
        android:id="@+id/checkBox_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Guide_read_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:button="@drawable/checkbox_selector"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:text="@string/Do_not_show_next_time"
        android:textColor="#FFFFFF"
        android:textSize="20sp"


        />


</RelativeLayout>