<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:background="@color/light_blue">

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/result_page_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/result_page"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:paddingStart="10dp" />

    <LinearLayout
        android:id="@+id/input_table"
        android:layout_marginTop="10dp"
        android:layout_below="@id/result_page_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Subject"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/score"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/credit"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"/>

    </LinearLayout>


    <ScrollView
        android:layout_marginTop="10dp"
        android:id="@+id/all_data_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_table"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/result_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"/>
    </ScrollView>

    <TextView
        android:id="@+id/show_result"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/all_data_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:gravity="center"/>

</RelativeLayout>