<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/light_blue">

    <LinearLayout
        android:id="@+id/top_bar"
        android:background="@color/white"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/name"
            android:textColor="@color/light_blue"
            android:gravity="center_vertical"
            android:textSize="35sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinner_container"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/top_bar">


        <TextView
            android:id="@+id/select_uni_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/uni_selector"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:gravity="center"
            />

        <Spinner
            android:id="@+id/uni_select_spinner"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_marginLeft="-20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.5"
            android:entries="@array/uni_array"
            android:layout_marginStart="-20dp"
            android:layout_marginEnd="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_describe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@id/spinner_container"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/subject_input_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sub_code"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/score_input_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/credit_input_hit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/credit"/>

        <Button
            android:id="@+id/button_clear_all"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:layout_weight="1"
            android:background="@drawable/delete_button"
            android:text="@string/delete_all"
            android:textColor="@color/white" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_describe"
        >


        <LinearLayout
            android:id="@+id/container_layout"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/first_line_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/Subject_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="numberSigned"
                    android:hint="@string/Subject"
                    android:importantForAutofill="no" />
                <EditText
                    android:id="@+id/Score_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="numberSigned"
                    android:hint="@string/score"/>
                <EditText
                    android:id="@+id/Credit_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/credit"
                    android:inputType="numberSigned"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/first_line_delete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/cannot_delete"
                    android:gravity="center"
                    android:textColor="@color/black"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginBottom="67dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/icon_plus" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="67dp"
        android:layout_marginRight="34dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/icon_calculate"
        android:layout_marginEnd="34dp"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/question_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/icon_question_mark"
        />

</RelativeLayout>